# instant_nerf

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
model/: CMakeLists.txt  build.sh
model/configs/nerf/: base_attr.json
model/include/neural-graphics-primitives/: camera_path.h  common.h  extra_attr.h  marching_cubes.h  nerf_loader.h  nerf_network.h  render_buffer.h  testbed.h
model/scripts/: common.py  run.py  scenes.py
model/src/: camera_path.cu  main.cu  marching_cubes.cu  nerf_loader.cu  python_api.cu  render_buffer.cu  testbed.cu  testbed_nerf.cu  triangle_bvh.cu
